--- a/src/styles/Menu.css
+++ b/src/styles/Menu.css
@@ -62,6 +62,30 @@
   margin-right: 10px;
 }
 
+.menuItem button {
+  border: none;
+  border-radius: 5px;
+  background-color: #252d32;
+  color: white;
+  cursor: pointer;
+  height: 40px;
+  width: 60%;
+  font-size: 17px;
+  margin-bottom: 20px;
+  margin-left: 70px;
+}
+
+.menuItem button:hover {
+  background-color: #07090a;
+  cursor: pointer;
+  border-radius: 15px;
+  transition: 0.3s ease-in;
+}
+
+.menuItem button:active {
+  background-color: grey;
+}
+
 @media only screen and (max-width: 1300px) {
   .menuList {
     grid-template-columns: 1fr 1fr;
