--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -1,19 +1,19 @@
 .about{
-    height: auto;
+    min-height: 100vh;
     width: 100%;
 
-    margin-top: 100px;
+    overflow-x: hidden;
 
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-evenly;
     flex-wrap: wrap;
     align-content: center;
     background-color: rgb(242, 243, 234);
 
-    padding-bottom: 7%;
-    padding-top: 7%;
+    padding-bottom: 50px;
+    padding-top: 50px;
 }
 
 .text{
@@ -31,10 +31,9 @@
 }
 
 .about img{
+    box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.2);
     margin-top: 10px;
     /*border-radius: 30px;*/
-    width: 590px;
-    height: auto; 
+    width: 750px;
     max-width: 100%;
-    max-height: 40%;
 }
