--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -4,7 +4,8 @@
     color: white;
     
     width: 100%;
-    height: 100px;
+    min-height: 100px;
+    box-sizing: border-box;
 
     display: flex;
     flex-direction: row;
@@ -14,9 +15,7 @@
     padding-left: 10px;
     padding-right: 10px;
 
-    overflow-y: auto;
-    overflow-x: auto;
-    box-sizing: border-box;
+    overflow-x: hidden;
 }
 
 .footer img{
