--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -1,12 +1,15 @@
 .home {
     margin-top: 100px;
 
-    overflow-x: auto;
+    overflow-x: hidden;
     overflow-y: hidden;
 
     display: flex;
     align-items: left;
     flex-direction: column;
+
+    width: 100%;
+    height: 100vh;
   }
   
 .headerContainer {
@@ -15,12 +18,12 @@
     justify-content: flex-start;
     align-items: flex-start;
 
-    width: 100%;
-    height: 100vh;
-
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+
+    width: 100%;
+    height: 100%;
 
     padding: 20px;
     box-sizing: border-box;
