--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -1,7 +1,8 @@
 .navbar{
-    height: 100px;
+    height: 110px;
     width: 100%;
-    background-color: rgb(168, 171, 160);
+    /*background-color: #9dc09d;*/
+    background-color: #76a57a;
     /*background-image: linear-gradient(rgba(110, 143, 102, 0.812),rgba(178, 221, 167, 0.812));
     border-bottom: 3px #f5eeba solid;*/
     box-shadow: 3px ;
@@ -20,6 +21,11 @@
     box-sizing: border-box;
 
     flex-wrap: wrap-reverse;
+}
+
+.active{   
+    color: #121619!important;
+    /*border: 1px solid #121619;*/
 }
 
 .navbar .leftSide{
@@ -42,11 +48,13 @@
 }
 
 .navbar .rightSide ul li a{
-    padding: 2px;
+    border-radius: 12px;
+    padding: 4px;
     text-decoration: none;
     color: white;
     /*font-weight: bold;*/
     font-size: 18px;
+    font-weight: bold;
 }
 
 .navbar .rightSide ul li a:hover{
@@ -78,14 +86,17 @@
 }
 
 .navbar #open .burgerMenu ul li a{
+    border-radius: 10px;
+    padding: 1px;
     text-decoration: none;
     color: rgb(255, 255, 255);
-    /*font-weight: bold;*/
+    font-weight: bold;
     font-size: 16px;
 }
 
-.navbar #open .burgerMenu ul li a:hover{
+.navbar #open .burgerMenu ul li a:hover{   
     box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.2);
+    transition: 0.3 ease-in;
 }
 
 .navbar #close .burgerMenu {
