--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -23,7 +23,11 @@
     flex-wrap: wrap-reverse;
 }
 
-.active{   
+#openIcon{
+    color: #121619;
+}
+
+.active{
     color: #121619!important;
     /*border: 1px solid #121619;*/
 }
