cart price added

--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -30,7 +30,7 @@
     position: fixed;
     z-index: 1;
     background-color: #c59cb9;
-    border-radius: 0px 0px 40px 0px;  
+    border-radius: 0px 0px 10px 0px;  
     border-right: 1px solid #ffffff;
     border-bottom: 1px solid #ffffff;
 }
@@ -66,7 +66,7 @@
 }
 
 #openIcon{
-    color: #f7e69e;
+    color: #121619;
 }
 
 .active{
