--- a/src/styles/Kontakt.css
+++ b/src/styles/Kontakt.css
@@ -21,6 +21,7 @@
     box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.5);
     display: grid;
     grid-template-columns: 100%;
+    justify-items: center;
     border-radius: 10px;
     background-color: #ffffff;
     padding: 50px;
@@ -29,7 +30,7 @@
 }
 
 .contact form .input-box .field{
-    text-align: center;
+    text-align: left;
     border-radius: 5px;
     height: 20px;
     width: 100%;
